# fxa-email-service

./: CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile-cache  Dockerfile-withcache  README.md  aliases.js  search-index.js  version.json
.circleci/: config.yml
config/: default.json  dev.json
fxa_email_queues/: all.html  index.html
fxa_email_send/: all.html  index.html
fxa_email_service/: all.html  index.html  macro.rocket_uri_for_handler.html  macro.rocket_uri_for_heartbeat.html  macro.rocket_uri_for_lbheartbeat.html  macro.rocket_uri_for_version!.html  macro.rocket_uri_for_version.html  rocket_uri_for_handler.m.html  rocket_uri_for_heartbeat.m.html  rocket_uri_for_lbheartbeat.m.html  sidebar-items.js
fxa_email_service/api/: index.html  sidebar-items.js
fxa_email_service/app_errors/: AppError.t.html  AppErrorKind.t.html  AppResult.t.html  enum.AppErrorKind.html  fn.bad_request.html  fn.internal_server_error.html  fn.method_not_allowed.html  fn.not_found.html  fn.too_many_requests.html  fn.unprocessable_entity.html  index.html  sidebar-items.js  static.static_rocket_catch_info_for_bad_request.html  static.static_rocket_catch_info_for_internal_server_error.html  static.static_rocket_catch_info_for_method_not_allowed.html  static.static_rocket_catch_info_for_not_found.html  static.static_rocket_catch_info_for_too_many_requests.html  static.static_rocket_catch_info_for_unprocessable_entity.html  static_rocket_catch_info_for_method_not_allowed.v.html  struct.AppError.html  (+2 more)
src/: deserialize.rs  error.rs  healthcheck.rs  lib.rs  main.rs  service_main.rs
(+470 files in other folders)
