[package]
name = "fxa-email-service"
version = "0.1.0"

[dependencies]
config = { git = "https://github.com/ivanovaleksey/config-rs", branch = "issue-70" }
lazy_static = "1.0"
regex = "0.2.10"
rocket = "0.3.9"
rocket_codegen = "0.3.9"
rocket_contrib = "0.3.9"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
validator = "0.6.3"
validator_derive = "0.6.5"
